# pjsua2-python

./: .gitignore  MANIFEST.in  README.md  publish.md  pyproject.toml  setup.py
.github/workflows/: build.yml  verify-release.yml
pjsua2/: __init__.py  _version.py
scripts/: build_linux_wheel.sh  build_macos_wheel.sh  build_pjsip_linux.sh  build_pjsip_macos.sh  build_pjsip_windows.ps1  build_windows_wheel.ps1  check_linux_build_tools.sh  check_macos_build_tools.sh  check_windows_build_tools.ps1  config_site.h  get_package_version.py  get_pjsip_ref.py  install_linux_build_deps.sh  install_macos_build_deps.sh  install_windows_build_deps.ps1  openssl_compat_1_0.h  setup_pjsua2_windows.py  smoke_test.py  stage_bindings.py  test_import.py  test_local_cp312.sh
