[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pjsua2-python"
dynamic = ["version"]
description = "Reusable binary wheel packaging for PJSUA2 Python bindings"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Your Team" }
]
keywords = ["pjsip", "pjsua2", "sip", "voip", "telephony"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Telephony",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/your-org/pjsua2-python"
Repository = "https://github.com/your-org/pjsua2-python"

# Package versions intentionally mirror the bundled pjproject/PJSIP release.
# Example: package 2.15.1 must be built from PJSIP_REF=2.15.1.

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "pjsua2._version.__version__" }

[tool.setuptools.packages.find]
include = ["pjsua2"]

[tool.setuptools.package-data]
pjsua2 = ["*.py", "*.so", "*.pyd", "*.dll", "*.dylib"]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux_* *-win32"
test-command = "python {project}/scripts/test_import.py"
before-all-linux = "bash {project}/scripts/install_linux_build_deps.sh"
before-all-macos = "bash {project}/scripts/install_macos_build_deps.sh"
before-all-windows = "powershell -ExecutionPolicy Bypass -File {project}\\scripts\\install_windows_build_deps.ps1"
before-build-linux = "bash {project}/scripts/build_pjsip_linux.sh"
before-build-macos = "bash {project}/scripts/build_pjsip_macos.sh"
before-build-windows = "powershell -ExecutionPolicy Bypass -File {project}\\scripts\\build_pjsip_windows.ps1"
repair-wheel-command-linux = "auditwheel repair -w {dest_dir} {wheel}"
repair-wheel-command-macos = "delocate-wheel -w {dest_dir} -v {wheel}"
manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
